# SemesterProject

./: Backend.h  CMakeLists.txt  FindCentersWindow.qml  LICENSE  Loginwindow.qml  Main.qml  MapWindow.qml  README.md  Selectionwindow.qml  SignupPg.qml  backend.cpp  main.cpp
